added typed customhook for resize screen for tablet and mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,2 +1,7 @@
-@import '../../index.scss'
+// @import '../../index.scss'
+@import url('../../index.scss');
 
+.Header_Wrapper{
+  width: 100%;
+  background-color: '#171A21';
+}
