--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,11 @@ body {
   // font-family: 'Roboto', sans-serif;
 }
 
+input{
+  border: none;
+  padding: 0;
+}
+
 h1,
 h2,
 h3,
@@ -16,7 +21,6 @@ p {
   margin: 0;
   padding: 0;
 }
-
 a {
   text-decoration: none;
 }
@@ -47,11 +51,5 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #939393;
-
   border-radius: 20px;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background: orange;
 }
