--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 
 .Header_Wrapper{
   background-color: #171a21;
-  width: 1280px;
+  max-width: 1280px;
   display: flex;
   align-items: center;
   padding: 33px 18px 33px 12px;
@@ -25,4 +25,82 @@
   color: #FFFFFF;
 }::placeholder{
   color: #FFFFFF;
+}
+
+// .Header_Dropdown{
+//   display: block;
+//   position: relative;
+//   justify-content: center;
+//   align-items: center;
+//   width: 37px;
+//   height: 37px;
+//   background-color: #837F7F;
+//   border-radius: 10px;
+//   margin-left: 12px;
+// }
+
+// .Header_Dropdown:hover .Header_Dropdown_Options {
+//   display: block;
+// }
+
+// .Header_Dropdown_Options{
+//   display: none;
+//   position: absolute;
+//   overflow: auto;
+//   width: 100px;
+//   background-color: #837F7F;
+//   border-radius: 10px;
+//   color: #FFFFFF;
+// }
+
+.Header_Dropdown:hover .Header_Dropdown_Options {
+  display: block;
+}
+
+.dropdown{
+  display: inline-block;
+  position: relative;
+  width: 37px;
+  height: 37px;
+  margin-left: 12px;
+
+}
+.Profile_Btn {
+  border:none;
+  border-radius: 10px;
+  background-color: #837F7F;
+  cursor:pointer;
+  min-width: 36px;
+}
+
+.Profile_Btn:hover{
+  background-color: #837F7F;
+}
+
+.dropdownOptions{
+  display: none;
+  position: absolute;
+  overflow: auto;
+  background-color:#fff;
+  border-radius:5px;
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+}
+
+.dropdown:hover .dropdownOptions{
+  display: block;
+}
+
+.dropdownOptions .link {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+  padding:20px 40px;
+}
+
+.dropdownOptions .link:hover{
+  color: #0a0a23;
+  background-color: #ddd;
+  border-radius:5px;
+  cursor: pointer;
 }
