--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,21 @@
 @import url("../../index.scss");
+.Infinity_Element {
+  background-color: #171a21;
+}
+
 .Header_Wrapper {
   background-color: #171a21;
-  max-width: 1280px;
+  width: 1171px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
   padding: 33px 18px 33px 12px;
 }
 
@@ -106,9 +114,25 @@
 }
 
 .select {
-  background-color: #837F7F;
   width: 189px;
   height: 36px;
   margin-left: 13px;
+}
+
+.Navlink_Wrapper {
+  margin-left: 13px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 10px;
+  background-color: #837F7F;
+  height: 37px;
+}
+
+.Navlink_Btn {
+  width: 67px;
+  background-color: #837F7F;
+  border-radius: 10px;
+  color: #fff;
 }
 /*# sourceMappingURL=Header.module.css.map */
