fix padding in header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,9 +11,10 @@
   width: 1171px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
-  padding: 33px 18px 33px 12px;
+  // padding: 33px 18px 33px 12px;
+  padding: 33px 0;
 }
 
 .logo{
