--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -3,6 +3,7 @@
 
 .Infinity_Element{
   background-color: #171a21;
+  padding-top: 24px;
 }
 
 .Main_Wrapper{
@@ -11,4 +12,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
 }
