--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,11 +12,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
-  padding: 33px 18px 33px 12px;
+  padding: 33px 0;
 }
 
 .logo {
