doing custom pagination

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -3,3 +3,32 @@
 .Pagination {
   color: #fff;
 }
+
+.Pagination_activeClassName{
+  color: #fff;
+}
+.Pagination_pageLinkClassName{
+  color: #fff;
+}
+.Pagination_breakLinkClassName{
+  color: #fff;
+}
+.Pagination_nextLinkClassName{
+  color: #fff;
+}
+.Pagination_previousLinkClassName{
+  color: #fff;
+}
+
+.Pagination_pageClassName{
+  color: #fff;
+}
+.Pagination_breakClassName{
+  color: #fff;
+}
+.Pagination_nextClassName{
+  color: #fff;
+}
+.Pagination_previousClassName{
+  color: #fff;
+}
